--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -16,6 +16,22 @@ header nav {
 	position: relative;
     z-index: 1200;
 }
+footer nav {
+	margin-top: 9px;
+	float: right;
+}
+footer nav a {
+	color: #fff;
+	font-size: 11px;
+}
+
+.box_skitter .label_skitter div {
+	font-size: 12px;
+	margin-left: 10px;
+	margin-top: -10px;
+	padding-bottom: 5px;
+}
+
 /*Basic Colors right on top of the Stylesheet, so you can simply search and replace them*/
 span.pink {
 	color: #0099FF;
@@ -23,8 +39,13 @@ span.pink {
 span.hover_pink {
 	color: #70C6FF;
 }
-.form-horizontal .control-label {
-    padding-top: 10px;
+form.feedback select {
+	width: 100%;
+	height: 45px;
+	margin-top: -7px;
+}
+form.feedback textarea, form.feedback input[type="text"], form.feedback input[type="email"] {
+	width: 100%;
 }
 .dark {
 	color: #000;
@@ -62,8 +83,11 @@ ul.social a:hover {
 .events .thumbnail {
 	height: 320px;
 }
+.events-small .thumbnail {
+	height: 138px;
+}
 .eventsfull .thumbnail {
-	height: 440px !important;
+	height: 360px !important;
 }
 .events .date, .events .location {
 	font-weight: bold;
@@ -71,6 +95,9 @@ ul.social a:hover {
 }
 .events .acts {
 	color: #000 !important;
+	width: 220px;
+	margin-left: auto;
+	margin-right: auto;
 	font-weight: bold;
 	font-size: 12px;
 	margin-top: 5px;
@@ -122,6 +149,11 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'OstrichSansBlack', Helvetica, sans-serif;
 	text-transform: uppercase;
 }
+.home h4 {
+	color: #000;
+	opacity: 1.0;
+	text-shadow: none;
+}
 .fb-like {
 	float: right;
 	margin: 7px 5px 0 0;
@@ -149,6 +181,10 @@ h1, h2, h3, h4, h5, h6 {
 	color: #000;
 	background: url("../img/overlays/light-solid.png") repeat scroll 0 0 transparent;
 	padding: 20px;
+}
+.bg {
+	color: #000;
+	background: url("../img/overlays/light-solid.png") repeat scroll 0 0 transparent;
 }
 .block {
 	float: left;
