--- a/views/contest.phtml
+++ b/views/contest.phtml
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="hero-unit">
         <h1><span class="raleway">Psy&Prog</span>.Contest</h1>
-        <p><strong>27.08.2013 - Take the chance to get your track published on all major online platforms!</strong></p>
+        <p><strong>Take the chance to get your track published on all major online platforms!</strong></p>
     </div>
 	
 	<div class="hero-unit">
@@ -16,17 +16,16 @@
 		<h4>The rules</h4>
 		<ul class="light">
 			<li>The genre must be Progressive Trance, Psytrance, Goatrance or a mix of them</li>
-			<li>The track must be uploaded after August 27th 2013</li>
-			<li>The track must not be released or signed by any label</li>
+			<li>The track must be uploaded until December 31th 2013</li>
+			<li>The track must not be released or signed by another label</li>
 			<li>The Track must be an original (no remixes)</li>
 			<li>The artist must hold all rights on the track and not violate the rights of any third person</li>
-			<li>By submitting a track you agree to sign the track with 3886records in case of winning</li>
 		</ul>
 		<br/>
 		
 		<h4>Deadline</h4>
 		<ul class="light">
-			<li>There is no fixed deadline. Take your time to produce a great track, but don't dawdle as we may close the competition as soon as we think there are enough competing tracks...</li>
+			<li>December 31st 2013. Be sure to submit your finished Track until the end of the year!</li>
 		</ul>
 		<br/>
 
