--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -12,6 +12,7 @@
 <meta name="description" content="Finest electronic music">
 <meta name="author" content="3886records">
 <meta property="og:image" content="<?= isset($facebookImage) ? $facebookImage : 'http://www.3886records.de/img/3886logo.png' ?>" />
+<meta property="og:description" content="<?= isset($facebookDescription) ? $facebookDescription : 'Finest Electronic Music' ?>" />
 <!-- the styles -->
 <link href="/css/supersized.css" rel="stylesheet" media="screen">
 <link rel="stylesheet" href="/theme/supersized.shutter.css" type="text/css" media="screen" />
@@ -22,6 +23,8 @@
 <link href="/css/responsive.css" rel="stylesheet">
 <link href="/css/font-awesome.css" rel="stylesheet">
 <link href="/css/ui/jquery-ui-1.10.3.custom.css" rel="stylesheet">
+<link type="text/css" href="/css/skitter.styles.css" media="all" rel="stylesheet" />
+
 <!--[if IE 7]>
     <link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
     <![endif]-->
@@ -36,6 +39,7 @@
 <link rel="apple-touch-icon-precomposed" href="/ico/apple-touch-icon-57-precomposed.png">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
+<script src="/js/jquery-1.9.1.js"></script>
 </head>
 <body class="ui">
 <script>
@@ -47,13 +51,6 @@
   ga('send', 'pageview');
 </script>
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/de_DE/all.js#xfbml=1&appId=583037658388035";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 <div class="spinner"></div> 
 <header>
   <nav data-navgroup="main">
@@ -86,10 +83,12 @@
 			<a class="twitter tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Twitter" target="_blank" href="http://www.twitter.com/3886records"><i class="icon-twitter-sign icon-large"></i></a>
 			<a class="youtube tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Youtube" target="_blank" href="http://www.youtube.com/user/3886records"><i class="icon-youtube-sign icon-large"></i></a>
 		</div>
+		<nav>
+			<a data-method="async" href="/disclaimer">Imprint / Disclaimer</a>
+		</nav>
     </div>
   </div>
 </footer>
-<script src="/js/jquery-1.9.1.js"></script>
 <script src="/js/bootstrap.min.js"></script> 
 <script src="/js/jquery.easing.min.js"></script> 
 <script src="/js/supersized.3.2.7.min.js"></script> 
@@ -97,6 +96,8 @@
 <script src="/js/custom.js"></script>
 <script src="/js/jquery.ui.totop.min.js"></script>
 <script src="/js/jquery-ui-1.10.3.custom.js"></script>
+<script src="/js/jquery.animate-colors-min.js"></script>
+<script src="/js/jquery.skitter.min.js"></script>
 <script>    
      jQuery(window).load(function() { 
         jQuery('.spinner').animate({'opacity':0},500,'easeOutCubic',function (){jQuery(this).css('display','none')});  
