fixed committed conflicts

--- a/views/home.phtml
+++ b/views/home.phtml
@@ -23,7 +23,7 @@
 							<p>PsyBuddy - Amrita EP</p>
 							<div>
 								Listen to the Preview Mix for free on <a target="_blank" href="https://x.mixcloud.com/3886records/psybuddy-amrita-ep/">MixCloud</a><br/>
-								Release on January 18th 2014 at Beatport. Hear PsyBuddy Live at his <a href="http://facebook.com/events/1375455859369689/" target="_blank">Release Party</a> on January 17th 2014<br/>
+								Now available on <a target="_blank" href="http://www.beatport.com/release/amrita-ep/1223416">Beatport</a>
 							</div>
 						</div>
 					</li>
