--- a/views/win.phtml
+++ b/views/win.phtml
@@ -5,11 +5,34 @@
         <br/>
         <div class="row">
 	        <div class="span7">
+				
+				<? if (time() > strtotime('2014-01-23 23:00:00')): ?>
+				
+				 <p id="info">
+		        	<strong><a title="zum Event bei Facebook" target="_blank" href="https://www.facebook.com/events/198446550360373">°★° Psy-Forge °★° Spekta's Birthday °★°</a></strong><br/>
+		        	<br/>
+		        	<strong>5 Mal freier Eintritt für die Psy-Forge am 24.1.2014 zu gewinnen!</strong><br/>
+					<span style="line-height: 19px; font-size: 12px; color: #000;">(Teilnahmeschluss: Donnerstag, 23.1.2014, 23:00 Uhr).</span>
+		        </p>
+				<p>
+					<strong>Die Gewinner stehen fest. Viel Spaß bei freiem Eintritt wünschen wir:</strong>
+					<ul style="color: #000;">
+						<li>Acid Junk</li>
+						<li>Jacky Mit Cola</li>
+						<li>Jason Kramer</li>
+						<li>Pitu Brazil</li>
+						<li>Philipp	Psytel</li>
+					</ul>
+				</p>
+				
+				<? else: ?>
+
 		        <p id="info">
 		        	<strong><a target="_blank" href="https://www.facebook.com/events/198446550360373">°★° Psy-Forge °★° Spekta's Birthday °★°</a></strong><br/>
 		        	<br/>
 		        	<strong>5 Mal freier Eintritt für die Psy-Forge am 24.1.2014 zu gewinnen!</strong><br/>
-		        	<strong>Um an dem Gewinnspiel Teilzunehmen führe folgende Schritte aus:</strong>
+		        	<strong>Um an dem Gewinnspiel Teilzunehmen führe folgende Schritte aus:</strong><br/>
+					<span style="line-height: 19px; font-size: 12px; color: #000;">(Teilnahmeschluss: Donnerstag, 23.1.2014, 23:00 Uhr).</span>
 		        </p>
 				<br/>
 		        <div id="rules">
@@ -31,9 +54,11 @@
 		        <br/>
 		        <p>Nur wenn Du alle drei Schritte befolgst und Deine Teilnahme nach dem letzten Schritt bestätigt wird nimmst Du am Gewinnspiel teil. Bekommst Du diese Nachricht nicht, versuche es bitte nocheinmal.</p>
 				</div>
+				
+				<? endif ?>
 		    </div>
 		    <div class="span4">
-		    	<a target="_blank" href="https://www.facebook.com/events/198446550360373"><img src="/img/psy-forge.jpg" alt="Psy-Forge" border="0"></a>
+		    	<a target="_blank" href="https://www.facebook.com/events/198446550360373" titel="zum Event bei Facebook"><img src="/img/psy-forge.jpg" alt="Psy-Forge" border="0"></a>
 		    </div>
 		</div>
 
@@ -121,6 +146,7 @@
 				<li>Jegliche Schadenersatzverpflichtung aus oder im Zusammenhang mit dem Gewinnspiel, gleich aus welchem Rechtsgrund, ist, soweit gesetzlich zulässig, auf Fälle von Vorsatz oder grober Fahrlässigkeit beschränkt.</li>
 				<li>Aus technischen Gründen sind Cookies für das Gewinnspiel notwendig. Eine Teilnahme ohne aktivierte Cookies ist leider nicht möglich.</li>
 				<li>Die bei diesem Gewinnspiel von Ihnen gemachten Angaben können von zum Zwecke der Werbung für eigene Produkte gespeichert und genutzt werden. Eine Weitergabe an Dritte findet nicht statt. Die Einwilligung zur Nutzung Ihrer personenbezogenen Daten können Sie jederzeit durch eine eMail an info@3886records.de widerrufen.</li>
+				<li>Teilnahmeschluss ist Donnerstag der 23.1.2014 um 23:00 Uhr</li>
 				<li>Der Rechtsweg ist ausgeschlossen.</li>
 			</ol>
 		</div>
