added invoice generator base

--- a/views/home.phtml
+++ b/views/home.phtml
@@ -18,22 +18,22 @@
 			<div class="box_skitter box_skitter_large">
 				<ul>
 					<li>
+						<img src="/img/releases/zwielicht-shadowplay-800x300.jpg">
+						<div class="label_text">
+							<p>Zwielicht - Shadowplay EP</p>
+							<div>
+								Listen to the mix for free on <a target="_blank" href="http://mixcloud.com/3886records/zwielicht-shadowplay-ep/">MixCloud</a><br/>
+								Now available on <a href="http://www.beatport.com/release/shadowplay-ep/1235597" target="_blank">Beatport</a>
+							</div>
+						</div>
+					</li>
+					<li>
 						<a target="_blank" href="https://x.mixcloud.com/3886records/psybuddy-amrita-ep/"><img src="/img/releases/psybuddy-amrita-ep-800x300.jpg"></a>
 						<div class="label_text">
 							<p>PsyBuddy - Amrita EP</p>
 							<div>
 								Listen to the Preview Mix for free on <a target="_blank" href="https://x.mixcloud.com/3886records/psybuddy-amrita-ep/">MixCloud</a><br/>
 								Now available on <a target="_blank" href="http://www.beatport.com/release/amrita-ep/1223416">Beatport</a>
-							</div>
-						</div>
-					</li>
-					<li>
-						<img src="/img/releases/zwielicht-shadowplay-800x300.jpg">
-						<div class="label_text">
-							<p>Zwielicht - Shadowplay EP</p>
-							<div>
-								Listen to the mix for free on <a target="_blank" href="http://mixcloud.com/3886records/zwielicht-shadowplay-ep/">MixCloud</a><br/>
-								Release on February 1st 2014 at Beatport. Hear Zwielicht Live at their <a href="https://www.facebook.com/events/374789385990978" target="_blank">Release Party</a> on January 31st
 							</div>
 						</div>
 					</li>
