--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -9,7 +9,8 @@
 <title>3886records - Finest electronic music</title>
 <? endif ?>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Finest electronic music">
+<meta name="description" content="Thirtyeight Eightysix Records is an independant record label for electronic dance music established by Spekta in 2012.">
+<meta name="keywords" content="3886, 3886rec., 3886rec, 3886 Records, Goa, Trance, Progressive Trance, Psychedelic Trance, Psytrance, Goatrance, Thirtyeight Eightysix">
 <meta name="author" content="3886records">
 <meta property="og:image" content="<?= isset($facebookImage) ? $facebookImage : 'http://www.3886records.de/img/3886logo.png' ?>" />
 <meta property="og:description" content="<?= isset($facebookDescription) ? $facebookDescription : 'Finest Electronic Music' ?>" />
@@ -24,7 +25,6 @@
 <link href="/css/font-awesome.css" rel="stylesheet">
 <link href="/css/ui/jquery-ui-1.10.3.custom.css" rel="stylesheet">
 <link type="text/css" href="/css/skitter.styles.css" media="all" rel="stylesheet" />
-
 <!--[if IE 7]>
     <link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
     <![endif]-->
